finished base code for game working on getting images related to answer to show up when guessed correctly

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             
         </p>
     </div>
+    <img id="book" src="./assets/images/divine_dungeon.jpg">
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
