added picture of book by author guessed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
         </p>
     </div>
-    <img id="book" src="./assets/images/divine_dungeon.jpg">
+    <img id="book" src="">
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
