--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         <p id="guessed">
             
         </p>
+        <img src="./assets/images/hangman1.png" id="man">
+        <button onclick="reset()" id="playAgain">Play Again?</button>
     </div>
         
     <div>
 
     </div>
-    <img id="book" src="assets/images/divine_dungeon.jpg">
+    <img id="book" src="">
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
